sbo init